<resources>
    <string name="app_name">ProjetoMobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="criar">Criar</string>
    <string name="cep">CEP</string>
    <string name="razao_social">Razao Social</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="e_mail">E-mail</string>
    <string name="municipio">Municipio</string>
    <string name="uf">UF</string>
    <string name="telefone">Telefone</string>
    <string name="voltar">Voltar</string>
    <string name="Agendar">Agendar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="salvar">Salvar</string>
</resources>